Bug 242562 - Starting the transaction editor via keyboard from ledger does not move focus to edit widget
Summary: Starting the transaction editor via keyboard from ledger does not move focus ...
Status: RESOLVED FIXED
Alias: None
Product: kmymoney
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: openSUSE Linux
: NOR normal
Target Milestone: ---
Assignee: KMyMoney Devel Mailing List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-06-23 08:25 UTC by Thomas Baumgart
Modified: 2010-06-23 13:05 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Thomas Baumgart 2010-06-23 08:25:23 UTC
Version:           unspecified (using KDE 4.3.5) 
OS:                Linux

I've just discovered an odd behavior in the ledger after importing an  
ofx file.  First, I used to be able to select a transaction in the  
ledger with the up and down arrow keys, then hit <Enter> to edit the  
transaction, and use <TAB> to move through the fields in the  
transaction form.  Now, after I hit <Enter>, the keyboard has no  
effect.  I may not have tried every single key, but I haven't found one  
that does anything.  (caps lock and num lock still work correctly, and  
<ALT><TAB> still goes to another app.)  Once I click anywhere in the  
transaction form with the mouse, <TAB>, <ESC>, and <ENTER> work as  
expected.  (This probably has nothing to do with the import - that's  
just when I happened to notice it.)

Reproducible: Always

Steps to Reproduce:
Click on ledger, select a transaction with the up/down keys, press Enter to start editing.

Actual Results:  
Focus remains on ledger

Expected Results:  
Focus should move to first edit widget
Comment 1 Thomas Baumgart 2010-06-23 13:05:38 UTC
SVN commit 1141735 by tbaumgart:

Prevent setting the focus on to an invisible widget while starting the transaction editor

BUG: 242562

 M  +31 -1     dialogs/transactioneditor.cpp  
 M  +1 -2      widgets/transaction.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1141735