Prevent setting the focus on to an invisible widget while starting the transaction editor

BUG: 242562

svn path=/trunk/extragear/office/kmymoney/; revision=1141735